--- a/OR/Makefile.conf
+++ b/OR/Makefile.conf
@@ -42,10 +42,10 @@ COQMF_CMDLINE_COQLIBS = -I .  -R . Top
 #                                                                             #
 ###############################################################################
 
-COQMF_COQLIB=/home/jia/.opam/8.19.0/lib/coq/
-COQMF_COQCORELIB=/home/jia/.opam/8.19.0/lib/coq/../coq-core/
-COQMF_DOCDIR=/home/jia/.opam/8.19.0/share/doc/
-COQMF_OCAMLFIND=/home/jia/.opam/8.19.0/bin/ocamlfind
+COQMF_COQLIB=/home/jiajia/.opam/default/lib/coq/
+COQMF_COQCORELIB=/home/jiajia/.opam/default/lib/coq/../coq-core/
+COQMF_DOCDIR=/home/jiajia/.opam/default/share/doc/
+COQMF_OCAMLFIND=/home/jiajia/.opam/default/bin/ocamlfind
 COQMF_CAMLFLAGS=-thread -bin-annot -strict-sequence -w -a+1..3-4+5..8-9+10..26-27+28..39-40-41-42+43-44-45+46..47-48+49..57-58+59..66-67-68+69-70
 COQMF_WARN=-warn-error +a-3
 COQMF_HASNATDYNLINK=true
